--- a/examples/index.html
+++ b/examples/index.html
@@ -15,6 +15,7 @@
 
             p.setup = _ => {
                 p.createCanvas(500, 500);
+                p.pixelDensity(1);
                 p.background(0);
 
                 gfx = p.createGraphics(p.width, p.height);
